--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@
 *.gbr*
 *.drl
 *.zip
+*.svg
 
 # Temporary files
 *.000
@@ -16,11 +17,13 @@
 *.kicad_prl
 *.sch-bak
 *~
+*.lck
 _autosave-*
 *.tmp
 *-save.pro
 *-save.kicad_pcb
 fp-info-cache
+
 
 # Netlist files (exported from Eeschema)
 *.net
